@@ -1,15 +1,13 @@
 ## TODO for next 0.98 release
 
-*  ~~KEYBGCOLOR none http://forums.cacti.net/viewtopic.php?f=16&t=55922~~
 *  Fix 5.3-7.0 strict errors
+*  ~~KEYBGCOLOR none http://forums.cacti.net/viewtopic.php?f=16&t=55922~~
 *  ~~Config file path validation issue in editor (CVE-2013-3739)~~
 *  ~~KILO was ignored when processing %k in special tokens~~
 *  ~~nowarn_WMxxxx actually works!~~
 *  ~~rounding error 'kinks' in angled VIA links~~
 *  ~~Cloning a templated node in editor retains the template in the clone~~
-*  Imagemap sortorder problem in editor. If you can see it, you can click it.
 *  ~~cacti_use_ifspeed incorrect when interfaces > 20M and ifhighspeed available~~
-*  if permissions in Cacti said Anyone *and* you, then no map images are shown
 *  ~~Add a warning for missing tables on manage~~
 *  ~~Add a warning for no maps on main tab if there are NO MAPS~~
 *  ~~Add note on editor that config names must have no space and end in .conf~~
@@ -17,19 +15,26 @@
 *  ~~HTMLOUTPUTFILE and IMAGEOUTPUTFILE in Cacti~~
 *  ~~new image-cycle~~
 *  ~~detect if Boost is installed and enabled, and recommend poller_output~~
-  *  the 'click here to add global setting' doesn't yet
+   *  ~~the 'click here to add global setting' doesn't yet~~
 *  ~~editor 'tidy' function~~
-*  editor MRU for picker  http://forums.cacti.net/viewtopic.php?f=16&t=50649
 *  ~~%t and %T support in ProcessString~~
 *  ~~Document %d in manual http://forums.cacti.net/viewtopic.php?f=16&t=22677~~
 *  ~~AICONFILLCOLOR accepts 'none' for drawing giant transparent shapes.~~
 *  ~~Switch to new-style plugin~~
 *  ~~Fix horrible formatting of manual~~
+*  ~~editor MRU for picker  http://forums.cacti.net/viewtopic.php?f=16&t=50649~~
+*  if permissions in Cacti said Anyone *and* you, then no map images are shown
+*  Imagemap sortorder problem in editor. If you can see it, you can click it.
+*  Update manual to at least include correct installation instructions!
 
-Commit old enough to have old-style code layout in it(!):
+Commit old enough to have old-style code layout in it(!) for reference:
 https://github.com/howardjones/network-weathermap/tree/3d8ae103dcddd67b1a1c9db109f5985e496ecd77
 
-## Small features
+### Small features
 
 * In-editor generator for switch port arrays http://forums.cacti.net/viewtopic.php?f=16&t=52618
 
+---
+## TODO for 0.98a
+
+*  Manual rewrite
