@@ -33,6 +33,7 @@ permissions differently, unfortunately.
     ADDED - command-line weathermap has new --no-warn option to disable warnings
     ADDED - AICONFILLCOLOR accepts 'none' for drawing giant transparent shapes.
     ADDED - Extra warning for Boost users about poller_output
+    ADDED - Cacti data picker in editor tracks most recently used hosts (thanks Zdolny)
 
 0.97c had no additional changes - it's just 0.97b with some silly errors fixed, and  all
 the CSS files included with the correct paths. There were also reports of problems with the
